feat: adiciona estilo das paginas iniciais

--- a/index.html
+++ b/index.html
@@ -5,20 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenzie Empresas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/styles/global.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
+    <link rel="stylesheet" href="./src/styles/header.css">
+    <link rel="stylesheet" href="./src/styles/footer.css">
 </head>
 <body>
     <header>
         <h1>Kenzie Empresas</h1>
-        <button>Login</button>
-        <button>Cadastro</button>
+        <div>
+            <button class="btnHeader">Login</button>
+            <button class="btnHeader">Cadastro</button>
+        </div>
     </header>
     <main>
-        <ul>
-            
+        <ul class="containerEmpresas">
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
+            <li>
+                <div>
+                    <h4>Eita bichola</h4>
+                    <span>25:00</span>
+                </div>
+                <p>Sex shop</p>
+                <p>Encontre o que quiser aqui, desde encanamento até fones de ouvido</p>
+            </li>
         </ul>
     </main>
     <footer>
-        <p>Kenzie Empresas</p>
+        <p>Kenzie Empresas | Todos os direitos reservados</p>
     </footer>
 </body>
 </html>
