--- a/src/pages/empresasADM.html
+++ b/src/pages/empresasADM.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/forms.css">
     <link rel="stylesheet" href="../styles/buttons.css">
-    <script defer type="module" src="../scripts/models/login.js"></script>
+    <script defer type="module" src="../scripts/api.js"></script>
+    <script defer type="module" src="../scripts/models/empresasADM.js"></script>
 </head>
 <body>
     <header>
@@ -22,22 +23,11 @@
             <h1>Kenzie Empresas</h1>
         </a>
         <div>
-            <button id="btnLogin" class="btnHeader">Login</button>
-            <button id="btnCadastro" class="btnHeader">Cadastro</button>
+            <button id="btnSair" class="btnHeader">Sair</button>
         </div>
     </header>
     <main>
-        <section class="containerForm">
-            <h2>Login</h2>
-            <form action="">
-                <input type="email" name="" id="emailLogin" placeholder="Digite seu email">
-                <input type="password" name="" id="senhaLogin" placeholder="Digite sua senha">
-            </form>
-            <div>    
-                <button class="btnIrCadastro">Não tem cadastro? Clique aqui</button>
-            </div>    
-            <button id="btnForm">Logar</button>
-        </section>
+        <h1>Bem vindo, adm</h1>
     </main>
     <footer>
         <p>Kenzie Empresas | Todos os direitos reservados</p>
