--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -14,23 +14,27 @@
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/forms.css">
     <link rel="stylesheet" href="../styles/buttons.css">
+    <script defer type="module" src="../scripts/api.js"></script>
+    <script defer type="module" src="../scripts/models/cadastro.js"></script>
 </head>
 <body>
     <header>
-        <h1>Kenzie Empresas</h1>
+        <a href="../../index.html">
+            <h1>Kenzie Empresas</h1>
+        </a>
         <div>
-            <button class="btnHeader">Login</button>
-            <button class="btnHeader">Cadastro</button>
+            <button id="btnLogin" class="btnHeader">Login</button>
+            <button id="btnCadastro" class="btnHeader">Cadastro</button>
         </div>
     </header>
     <main>
         <section class="containerForm">
             <h2>Cadastro</h2>
             <form action="">
-                <input type="text" name="" id="" placeholder="Digite seu nome">
-                <input type="email" name="" id="" placeholder="Digite seu email">
-                <input type="text" name="" id="" placeholder="Digite seu cargo">
-                <input type="password" name="" id="" placeholder="Digite sua senha">
+                <input type="text" name="" id="nomeCadastro" placeholder="Digite seu nome">
+                <input type="email" name="" id="emailCadastro" placeholder="Digite seu email">
+                <input type="text" name="" id="cargoCadastro" placeholder="Digite seu cargo">
+                <input type="password" name="" id="senhaCadastro" placeholder="Digite sua senha">
             </form>
             <div>    
                 <button class="btnIrCadastro">Já tem um cadastro? Clique aqui</button>
