feat: adiciona login, cadastro, cadastro de empresa, listagem de empresas, modificação de usuario, cadastro de setor e etc

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./src/styles/index.css">
     <link rel="stylesheet" href="./src/styles/header.css">
     <link rel="stylesheet" href="./src/styles/footer.css">
+    <link rel="stylesheet" href="./src/styles/forms.css">
+    <link rel="stylesheet" href="./src/styles/cards.css">
     <script defer type="module" src="./src/scripts/api.js"></script>
     <script defer type="module" src="./src/scripts/models/index.js"></script>
 </head>
@@ -30,7 +32,7 @@
             <option value="semSetor">Todos setores</option>
         </select>
         <ul class="containerEmpresas">
-
+            
         </ul>
     </main>
     <footer>
