--- a/src/pages/empresas.html
+++ b/src/pages/empresas.html
@@ -23,6 +23,8 @@
             <h1>Kenzie Empresas</h1>
         </a>
         <div>
+            <button class="btnHeader">Empresas</button>
+            <button class="btnHeader">Funcionarios</button>
             <button id="btnSair" class="btnHeader">Sair</button>
         </div>
     </header>
