feat: adiciona pagina de usuario não adm, finaliza pagina de adm

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -42,7 +42,7 @@
             <button id="btnForm">Cadastrar</button>
         </section>
     </main>
-    <footer>
+    <footer class="footer1">
         <p>Kenzie Empresas | Todos os direitos reservados</p>
     </footer>
 </body>
