--- a/src/pages/empresasADM.html
+++ b/src/pages/empresasADM.html
@@ -90,7 +90,7 @@
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer2">
         <p>Kenzie Empresas | Todos os direitos reservados</p>
     </footer>
 </body>
