--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -39,7 +39,7 @@
             <button id="btnForm">Logar</button>
         </section>
     </main>
-    <footer>
+    <footer class="footer1">
         <p>Kenzie Empresas | Todos os direitos reservados</p>
     </footer>
 </body>
