--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
         </ul>
     </main>
-    <footer>
+    <footer class="footer1">
         <p>Kenzie Empresas | Todos os direitos reservados</p>
     </footer>
 </body>
