--- a/src/pages/landingPageADM.html
+++ b/src/pages/landingPageADM.html
@@ -54,7 +54,7 @@
 
         </ul>
     </main>
-    <footer>
+    <footer class="footer1">
         <p>Kenzie Empresas | Todos os direitos reservados</p>
     </footer>
 </body>
